# gef-core

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Taskfile.yml  draft_intro.md  pixi.toml
.opencode/skills/orthodox-modern-cpp/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/drafts/: gef-book-design.md  terminology-reference.md
.sisyphus/notepads/gef-mvp-implementation/: decisions.md  learnings.md
.sisyphus/plans/: gef-design-book.md  gef-mvp-implementation.md
cmake/: GefModule.cmake  gef-config.cmake.in
docs/: data_system.md
docs/design/: binding-model.md  development-roadmap.md  error-handling.md  external-adapters.md  module-system.md  overview.md  plugin-architecture.md  resource-pool.md  scheduler.md  system.md  validation-layer.md  yaml-config.md
docs/guide/: 00-introduction.md  01-quick-start.md  02-your-first-module.md  03-bindings.md  04-composing-pipelines.md  05-flows-and-parallelism.md  06-batch-processing.md  07-resource-management.md  08-debugging.md  09-external-libraries.md  10-example-projects.md
include/gef/: Common.h  Context.h  Macros.h  Module.h  PluginLoader.h  Registry.h  System.h  app.h  gef.hpp  module.hpp
include/gef/core/binding/: Common.h  Context.h
include/gef/core/module/: AtomicModule.h  CompositeModule.h  Macros.h  Module.h  ModuleRegistry.h  ModuleStore.h  ModuleVariant.h
include/gef/core/scheduler/: Scheduler.h
include/gef/core/system/: Error.h  Flow.h  System.h
modules/: CMakeLists.txt  example_add.cpp  example_divide.cpp  example_multiply.cpp  example_subtract.cpp
src/: CMakeLists.txt  main.cpp
src/core/: config.cpp  config.h
src/gef/: Context.cpp  PluginLoader.cpp  Registry.cpp  System.cpp
src/gef/core/module/: AtomicModule.cpp  AtomicModule.hpp  AtomicModuleInternal.h  CompositeModule.cpp  ModuleRegistry.cpp  ModuleStore.cpp
src/gef/core/scheduler/: Scheduler.cpp
src/gef/core/system/: Flow.cpp  System.cpp
src/modules/: math.cppm  utils.cppm
tests/: CMakeLists.txt  TestModulePath.h  test_composite_module.cpp  test_facade_app.cpp  test_facade_module.cpp  test_flow.cpp  test_main.cpp  test_module_system.cpp  test_plugin_system.cpp
tests/fixtures/modules/: missing_execute.cpp  missing_metadata.cpp  null_metadata.cpp
